--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
-                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:https://www.cdc.gov.tw/">https://www.cdc.gov.tw/</a>
+                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a href="https://www.cdc.gov.tw/">衛生福利部疾病管制署</a>
                     </div>
                 </div>
             </div>
