--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">此網站為因應新冠肺炎防治而設立，致力於收集與統整各式各樣的防疫資訊。下滑了解更多!</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">更多資訊</a>
                     </div>
                 </div>
             </div>
@@ -171,7 +171,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">更多防疫資訊!</h2>
+                        <h2 class="mt-0">更多防疫資訊</h2>
                         <hr class="divider my-4" />
                     </div>
                 </div>
