--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">確診病例數地圖</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                        <p class="text-white-50 mb-4">參考來源為衛生福利部疾病管制署之全球確診病例地圖</p>
+                        <a class="btn btn-light btn-xl js-scroll-trigger" href="https://sites.google.com/cdc.gov.tw/2019ncov/global">開始搜尋</a>
                     </div>
                 </div>
             </div>
