--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">防疫從你我做起 ! </a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">防疫大補貼</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">確診地圖</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">防疫小秘訣</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">影音專區</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">點擊了解更多防疫資訊</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">更多防疫資訊</a></li>
                     </ul>
                 </div>
             </div>
