--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-head-side-mask"></i> 
+                            <i class="fas fa-head-side-mask"></i> fa-4x
                             <h3 class="h4 mb-2">咳嗽戴口罩</h3>
                         </div>
                     </div>
