--- a/index.html
+++ b/index.html
@@ -70,26 +70,22 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-head-side-mask"></i> fa-4x
-                            <h3 class="h4 mb-2">咳嗽戴口罩</h3>
+                            <h3 class="h4 mb-2">一、咳嗽戴口罩</h3>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">肥皂勤洗手</h3>
+                            <h3 class="h4 mb-2">二、肥皂勤洗手</h3>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">少去醫院等多人場所</h3>
+                            <h3 class="h4 mb-2">三、少去醫院等多人場所</h3>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">非必要避免出國</h3>
+                            <h3 class="h4 mb-2">四、非必要避免出國</h3>
                         </div>
                     </div>
                 </div>
