--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">此網站為因應新冠肺炎防治而設立，致力於收集與統整各式各樣的防疫資訊。</p>
+                        <p class="text-white-75 font-weight-light mb-5">此網站為因應新冠肺炎防治而設立，提供簡要的重點防疫資訊。</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">更多資訊</a>
                     </div>
                 </div>
