--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white" id="portfolio">
             <div class="container text-center">
-                <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
                 <h2 class="mb-4">防疫影音專區</h2>
-                <a class="btn btn-light btn-xl js-scroll-trigger" href="https://www.youtube.com/watch?v=CEe5GwPNcy8">觀看影片</a>
+                <a class="btn btn-light btn-xl" href="https://www.youtube.com/watch?v=CEe5GwPNcy8">觀看影片</a>
             </div>
         </section>
         <!-- Contact-->
