--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                 </div>
             </div>
         </section>
-        //<!-- Call to action-->
+        <!-- Call to action-->
         <section class="page-section bg-dark text-white" id="portfolio">
             <div class="container text-center">
                 <h2 class="mb-4">防疫影音專區</h2>
-                <a class="btn btn-light btn-xl" href="https://www.youtube.com/watch?v=CEe5GwPNcy8">觀看影片</a>
+                <a class="btn btn-light btn-xl">觀看影片 href="https://www.youtube.com/watch?v=CEe5GwPNcy8"</a>
             </div>
         </section>
         <!-- Contact-->
