--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white" id="portfolio">
             <div class="container text-center">
-                <h2 class="mb-4">防疫影音專區</h2>
-                <a class="btn btn-light btn-xl">觀看影片 href="https://www.youtube.com/watch?v=CEe5GwPNcy8"</a>
+                <h6 class="mb-4">防疫影音專區</h6>
+                <hr class="divider light my-4" />                
+                <a class="btn btn-light btn-xl" href="https://www.youtube.com/watch?v=CEe5GwPNcy8">觀看影片</a>
             </div>
         </section>
         <!-- Contact-->
