--- a/index.html
+++ b/index.html
@@ -94,14 +94,9 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white" id="portfolio">
             <div class="container text-center">
-               <div class="row justify-content-center">
-                  <div class="col-lg-8 text-center">
-                <h6 class="mb-4">防疫影音專區</h6>
-                <hr class="divider light my-4" />                
+                <h1 class="mt-4">防疫影音專區</h1>
                 <a class="btn btn-light btn-xl" href="https://www.youtube.com/watch?v=CEe5GwPNcy8">觀看影片</a>
-                 </div>
-               </div>
-             </div>
+            </div>
         </section>
         <!-- Contact-->
         <section class="page-section" id="contact">
