--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <section class="page-section bg-dark text-white" id="portfolio">
             <div class="container text-center">
                 <h1 class="mt-4">防疫影音專區</h1>
-                <a class="btn btn-light btn-xl js-scroll-trigger" href="https://www.youtube.com/watch?v=CEe5GwPNcy8">觀看影片</a>
+                <a href="https://www.youtube.com/watch?v=CEe5GwPNcy8"><i class="fab fa-youtube"></i></a>
             </div>
         </section>
         <!-- Contact-->
