--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">確診地圖</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">防疫小秘訣</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">影音專區</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#video">影音專區</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">更多防疫資訊</a></li>
                     </ul>
                 </div>
@@ -92,7 +92,7 @@
             </div>
         </section>
         <!-- Call to action-->
-        <section class="page-section bg-dark text-white" id="portfolio">
+        <section class="page-section bg-dark text-white" id="video">
             <div class="container text-center">
                 <h1 class="mt-4">防疫影音專區</h1>
                 <a href="https://www.youtube.com/watch?v=CEe5GwPNcy8"><i class="fab fa-youtube"></i></a>
